 * Work around mv(1) behavior change in API 23's mv(1) (or at least
   the preview's version of mv)
 * The "timestamp" embedded in the fb-adb stub is now a function of the
   built binary, not the actual build time.  As a result, the build is
   now deterministic.
 * Standard error output from adb subprocesses is now correctly
   filtered and processed, eliminating duplicate error messages.

Incompatible changes:

 * Removed -U option for rcmd and shell commands
 * Drop support for Gingerbread. We're not gratuitously breaking
   Gingerbread compatibility, and we'll take patches that fix Gingerbread,
   but we don't use Gingerbread ourselves anymore and don't test fb-adb
   with it.
 * No longer fall back to adb commands

Version 1.5.1
-------------

New features:

 * --user and --root options for logw and readlink.

Bug fixes:

 * Properly report errors executing run-as and su.

Version 1.5.0
-------------

New features:

 * readlink command.  Useful on older devices without a readlink(1).

Version 1.4.4
-------------

Bug fixes:

  * Make SIGINT and other signals work for delegated adb tasks.

Version 1.4.3
-------------

Bug fixes:

  * Fix kqueue-based ppoll emulation on OS X to work correctly with
    regular disk files.

Version 1.4.2
-------------

Bug fixes:

 * Abstract unix socket creation function should fail on OS X

Version 1.4.1
-------------

New features:

 * Faster ADB-forwarded and TCP-based transit modes
 * Environment variables for setting options
 * logw command for writing logcat entries on device
   (think of logger(1)).
 * LZ4 compression of traffic
 * Tuned buffer sizes for greater throughput
 * Set and unset environment variables in remote child environments

Bug fixes:

 * Build system now works properly in cross-compilation environment
 * Stub is never world-writable while on device
 * Clean up reliably on quit signals
 * Avoid deadlock during hard shutdown when partial msg in buffer
 * Safe concurrent stub uploading